# airtable-lakeflow-connector

./: .credentials.example  .gitignore  CHANGELOG.md  CLEANUP_COMPLETE.md  CLEANUP_REPORT.md  CLEANUP_SUMMARY.txt  COMPLETE_VERIFICATION_CHECKLIST.md  CONNECTION_DEBUG.md  CRITICAL_FIXES.md  CURRENT_ISSUE.md  DATABRICKS_DEPLOYMENT.md  DATABRICKS_DEPLOYMENT_FIX.md  DLT_INTEGRATION_FIX.md  GITHUB_SETUP.md  IMPLEMENTATION_COMPARISON.md  INDEX.md  LOCAL_TESTING_COMPLETE.md  LOCAL_TESTING_GUIDE.md  MOVE_RISK_ASSESSMENT.md  OFFICIAL_APPROACH_GUIDE.md  README.md  SANITIZATION_IMPROVEMENTS.md  SIMPLIFIED_PATTERN.md  STRUCTURE_VERIFICATION.txt  TEMPLATE_ANALYSIS_SUMMARY.md  UI_DEPLOYMENT_TROUBLESHOOTING.md  URGENT_FIX_NEEDED.md  WORKSPACE_SYNC_GUIDE.md  create_uc_connection.sql  debug_databricks_imports.py  environments.conf  ingest.py  ingest_databricks.py  pyproject.toml  requirements.txt  setup_local_test.sh
docs/: DEPLOYMENT.md  LOCAL_TESTING.md  TROUBLESHOOTING.md  WORKSPACE_DEPLOYMENT.md  reference_ingest_with_serialization.py.txt
docs/archive/: CLEANUP_PLAN.md  DLT_PIPELINE_CONFIG_OFFICIAL.json  DLT_PIPELINE_CONFIG_OFFICIAL.yaml  DLT_PIPELINE_CONFIG_REPOS.json  DLT_PIPELINE_CONFIG_WITH_UC.md  EXPERT_GUIDANCE_RESPONSE.md  README.md  REPOS_DEPLOYMENT.md  REPOS_DEPLOYMENT_SUCCESS.md  REPOS_MANUAL_DEPLOYMENT.md  REPOS_QUICKSTART.md  SERIALIZATION_ERROR_EXPLAINED.md  YAML_CORRECTION_GUIDE.md
libs/: __init__.py  spec_parser.py
libs/common/: __init__.py  source_loader.py
pipeline/: __init__.py  ingestion_pipeline.py  lakeflow_python_source.py
pipeline-spec/: __init__.py  airtable_spec.py
sources/: __init__.py
sources/airtable/: README.md  __init__.py  airtable.py
sources/interface/: __init__.py  lakeflow_connect.py
tests/: __init__.py  conftest.py  test_airtable_connector.py  test_pipeline_spec.py  test_pydantic_integration.py
ui/: DEPLOYMENT.md  README.md  index.html
ui/src/app/: App.tsx
ui/src/app/components/: DataPreview.tsx  SourceConfiguration.tsx  SyncConfiguration.tsx  TableBrowser.tsx  TargetConfiguration.tsx  Transformation.tsx
